# gfal2-xrootd

./: CMakeLists.txt  README  RELEASE-NOTES  readme.html
packaging/rpm/specs/: gfal2-plugin-xrootd.spec
src/: CMakeLists.txt  gfal_xrootd_plugin_3rd_copy.cpp  gfal_xrootd_plugin_interface.cpp  gfal_xrootd_plugin_interface.h  gfal_xrootd_plugin_main.cpp  gfal_xrootd_plugin_utils.cpp  gfal_xrootd_plugin_utils.h
src/tests/: sanitize.cpp
